--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,15 @@
   </dependencies>
 
   <build>
+  
     <plugins>
+      <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <executable>true</executable>
+            </configuration>
+      </plugin>
       <plugin>
         <groupId>io.spring.javaformat</groupId>
         <artifactId>spring-javaformat-maven-plugin</artifactId>
