--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,19 @@
 pipeline {
     agent any
 
-    stages {
-        stage('Build') {
-            steps {
-                echo 'Building..'
+    pipeline {
+        agent any
+
+        stages {
+            stage('Build') {
+                steps {
+                    sh 'make'
+                    archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
+                }
             }
         }
+    }
+
         stage('Test') {
             steps {
                 echo 'Testing..'
