Modification du jenkinsfile création pour test d'un Jenkinsfile2

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,28 +1,40 @@
-pipeline {
-    agent any
-
     pipeline {
         agent any
-
         stages {
             stage('Build') {
                 steps {
                     sh 'make'
+                    build 'Test-petclinic'
                     archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
+                    copyArtifacts fingerprintArtifacts: true, projectName: 'Test-petclinic', target: '/var/www'
                 }
             }
         }
-    }
-
         stage('Test') {
             steps {
-                echo 'Testing..'
+                 /* `make check` returns non-zero on test failures,
+                 * using `true` to allow the Pipeline to continue nonetheless
+                 */
+                 sh 'make check || true'
+                 junit '**/target/*.xml'
             }
         }
         stage('Deploy') {
-            steps {
-                echo 'Deploying....'
+            when {
+                 expression {
+                        currentBuild.result == null || currentBuild.result == 'SUCCESS'
+                 }
             }
+            steps {
+                 sh 'make publish'
+                 build 'pet-clinic-deploy'
+            }
+         }
+        stages {
+            stage('Example') {
+                steps {
+                    echo "Running ${env.BUILD_ID} on ${env.JENKINS_URL}"
+                }
+             }
         }
     }
-}
