--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,40 +1,21 @@
     pipeline {
         agent any
+
         stages {
             stage('Build') {
                 steps {
-                    sh 'make'
-                    build 'Test-petclinic'
-                    archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
-                    copyArtifacts fingerprintArtifacts: true, projectName: 'Test-petclinic', target: '/var/www'
+                    step ([$class: 'CopyArtifact',
+                            projectName: 'PollsSCM',
+                            target: '/var/www']
+                    );
                 }
             }
-        }
-        stage('Test') {
-            steps {
-                 /* `make check` returns non-zero on test failures,
-                 * using `true` to allow the Pipeline to continue nonetheless
-                 */
-                 sh 'make check || true'
-                 junit '**/target/*.xml'
-            }
-        }
-        stage('Deploy') {
-            when {
-                 expression {
-                        currentBuild.result == null || currentBuild.result == 'SUCCESS'
-                 }
-            }
-            steps {
-                 sh 'make publish'
-                 build 'pet-clinic-deploy'
-            }
-         }
-        stages {
-            stage('Example') {
+
+            stage('Deploy') {
                 steps {
-                    echo "Running ${env.BUILD_ID} on ${env.JENKINS_URL}"
+                    sh 'mv /var/www/target/spring-petclinic-*.jar /var/www/target/spring-petclinic-prod.jar'
+                    sh 'sudo systemctl restart petclinic'
                 }
-             }
+            }
         }
     }
