Modification du jenkinsfile

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,14 +7,25 @@
                     step ([$class: 'CopyArtifact',
                             projectName: 'Test-petclinic',
                             target: '/var/www']
+                    echo 'Artefact copié'
                     );
                 }
             }
+
+            stages {
+                    stage('Test') {
+                        steps {
+                            sh 'make check || true'
+                            junit '**/target/surefire-reports/*.xml'
+                        }
+                    }
+                }
 
             stage('Deploy') {
                 steps {
                     sh 'mv /var/www/target/spring-petclinic-*.jar /var/www/target/spring-petclinic-prod.jar'
                     sh 'sudo systemctl restart petclinic'
+                    echo 'Déploiement réussi'
                 }
             }
         }
