--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,7 @@
         stages {
             stage('Build') {
                 steps {
+                    sh 'rm -rf /var/www/target/'
                     step ([$class: 'CopyArtifact',
                             projectName: 'Test-petclinic',
                             target: '/var/www']
@@ -18,8 +19,9 @@
 
             stage('Deploy') {
                 steps {
+                    sh 'rm -rf '
                     sh 'mv /var/www/target/spring-petclinic-*.jar /var/www/target/spring-petclinic-prod.jar'
-                    sh 'sudo systemctl restart petclinic'
+                    sh 'sudo systemctl restart spring-petclinic'
 
                 }
             }
